[feat] api handler for create a new quiz
