# internal/controller/auth.go
@@ -6,7 +6,7 @@ import (
 	"triva/configs"
 	"triva/helper"
 	"triva/internal/request"
-	"triva/internal/response"
+	_ "triva/internal/response"
 	"triva/internal/service"
 
 	"github.com/gofiber/fiber/v2"
@@ -24,77 +24,55 @@ func NewAuthController(authService *service.AuthService) *AuthController {
 	}
 }
 
-type (
-	LoginIn struct {
-		Username string `json:"username" form:"username" validate:"required,omitempty,min=5"`
-		Password string `json:"password" form:"password" validate:"required,min=8"`
-	} // @name LoginIn
-	LoginOut struct {
-		Session string `json:"session" form:"session"`
-		Message string `json:"message" form:"message"`
-	} // @name LoginOut
-)
-
-const (
-	LoginAction = `/login`
-	LoginOkMsg  = `login successful !`
-)
+const LoginAction = `/login`
 
 // @Summary 			Login to authenticated
 // @Tags					Auth
-// @Param 				requestBody  body  LoginIn  true  "User credentials"
-// @Success				200 {object} LoginOut
+// @Param 				requestBody  body  request.LoginIn  true  "User credentials"
+// @Success				200 {object} response.LoginOut "Login Out"
 // @Produce				json
 // @Router				/auth/login [post]
 func (ac *AuthController) Login(c *fiber.Ctx) error {
-	in, err := helper.ReadJSON[LoginIn](c, c.Body())
+	loginIn, err := helper.ReadBody[request.LoginIn](c, c.Body())
 	if err != nil {
 		response := helper.NewHTTPResponse(err.Error(), nil)
 		return c.Status(fiber.StatusBadRequest).JSON(response)
 	}
 
-	sessionKey, err := ac.authService.Login(in.Username, in.Password)
+	loginOut, err := ac.authService.Login(loginIn)
 	if err != nil {
 		response := helper.NewHTTPResponse(err.Error(), nil)
 		return c.Status(fiber.StatusBadRequest).JSON(response)
 	}
 
-	ac.setCookie(c, sessionKey)
+	ac.setCookie(c, loginOut.SessionKey)
 
-	out := LoginOut{Session: sessionKey, Message: LoginOkMsg}
-	response := helper.NewHTTPResponse(``, out)
+	response := helper.NewHTTPResponse(``, loginOut)
 	return c.Status(fiber.StatusOK).JSON(response)
 }
 
-const (
-	RegisterAction = `/register`
-	RegisterOkMsg  = `user created !`
-)
+const RegisterAction = `/register`
 
 // @Summary 			Regiser to create an account
 // @Tags					Auth
 // @Param 				requestBody  body  request.RegisterIn  true  "User data"
-// @Success				200 {object} response.RegisterOut
+// @Success				200 {object} response.RegisterOut "Register Out"
 // @Produce				json
 // @Router				/auth/register [post]
 func (ac *AuthController) Register(c *fiber.Ctx) error {
-	in, err := helper.ReadJSON[request.RegisterIn](c, c.Body())
+	registerIn, err := helper.ReadBody[request.RegisterIn](c, c.Body())
 	if err != nil {
 		response := helper.NewHTTPResponse(err.Error(), nil)
 		return c.Status(fiber.StatusBadRequest).JSON(response)
 	}
 
-	err = ac.authService.Register(
-		in.Username, in.FullName, in.Email, in.Password,
-	)
-
+	registerOut, err := ac.authService.Register(registerIn)
 	if err != nil {
 		response := helper.NewHTTPResponse(err.Error(), nil)
 		return c.Status(fiber.StatusBadRequest).JSON(response)
 	}
 
-	out := response.RegisterOut{Message: RegisterOkMsg}
-	response := helper.NewHTTPResponse(``, out)
+	response := helper.NewHTTPResponse(``, registerOut)
 	return c.Status(fiber.StatusCreated).JSON(response)
 }
 
@@ -110,13 +88,13 @@ func (ac *AuthController) ForgotPassword(c *fiber.Ctx) error {
 // ########### Utilities ############### //
 // ##################################### //
 
-func (ac *AuthController) setCookie(c *fiber.Ctx, sessionId string) {
+func (ac *AuthController) setCookie(c *fiber.Ctx, sessionKey string) {
 	// 2 months expired
 	expiration := time.Now().AddDate(0, 2, 0)
 
 	c.Cookie(&fiber.Cookie{
 		Name:     configs.AUTH_COOKIE,
-		Value:    sessionId,
+		Value:    sessionKey,
 		Expires:  expiration,
 		SameSite: `Lax`,
 		Secure:   os.Getenv(`PROJECT_ENV`) == `prod`,
