# internal/request/auth.go
@@ -6,3 +6,9 @@ type RegisterIn struct {
 	Email    string `json:"email" form:"email" validate:"required,email"`
 	Password string `json:"password" form:"password" validate:"required,min=8"`
 } // @name RegisterIn
+
+
+type LoginIn struct {
+	Username string `json:"username" form:"username" validate:"required,omitempty,min=5"`
+	Password string `json:"password" form:"password" validate:"required,min=8"`
+} // @name LoginIn
