# internal/request/quiz.go
@@ -1,0 +1,6 @@
+package request
+
+type CreateQuizIn struct {
+	Name 		string	`db:"name" json:"name" validate:"required"`
+	UserId 	uint64	`db:"user_id" json:"user_id"`
+} // @name CreateQuizIn
