# internal/request/user.go
@@ -1,0 +1,7 @@
+package request
+
+import "mime/multipart"
+
+type UpdateAvatarIn struct {
+	Avatar 			multipart.Form 		`json:"avatar" form:"avatar"`
+} // @name UpdateAvatarIn
