# internal/response/quiz.go
@@ -1,0 +1,7 @@
+package response
+
+import "triva/internal/repository/quizzes"
+
+type CreateQuizOut struct {
+	Quiz	*quizzes.Quiz	`json:"quiz" form:"quiz"`
+} // @name CreateQuizOut
